--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -2,11 +2,11 @@
 
 <head>
   <title>Add comment</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <script src="javascripts/nav.js"></script>
+  <script src="js/nav.js"></script>
   <br><br><br>
   <div class="form-container">
     <h1 class="mobile">Add comment</h1>
