--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,11 +2,11 @@
 
 <head>
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-    <script src="javascripts/nav.js"></script>
+    <script src="js/nav.js"></script>
     <br><br><br>
     <% if(messages.error) {%>
     <%= messages.error %>
